--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "recharts": "^3.6.0",
-    "react-dom": "^19.2.3",
-    "react": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "@google/genai": "^1.34.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "recharts": "3.6.0",
+    "lucide-react": "0.460.0",
+    "@google/genai": "1.34.0",
+    "framer-motion": "11.11.17"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
